--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 <header>
-  <h1>Parapharmacie en Ligne</h1>
-  <p>Produits de soins, beauté et bien-être</p>
+  <h1>Parafleure</h1>
+  <p>“Parapharmacie en Ligne est un site dédié à la vente de produits de santé, beauté et bien-être. Notre objectif est de proposer des produits de qualité, accessibles à tous, avec un service simple et rapide en ligne.”
+  </p>
 </header>
 <nav>
   <a href="index.html">Accueil</a>
